--- a/css/main.css
+++ b/css/main.css
@@ -6,7 +6,7 @@ body{
   font-family: 'Open Sans', sans-serif;
 }
 
-h1 {
+h1, h2, h3, h4, h5, h6 {
   color: #003869;
 }
 
@@ -23,6 +23,16 @@ h1 {
   background-size: cover;
   overflow: hidden;
   height: 400px;
+}
+
+#jumbofreimuth {
+  background: #000 url("../img/Reederei_Freimuth_jumbo.jpg") center center; 
+    position: relative;
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  overflow: hidden;
+  height: 200px;
 }
 
 
@@ -63,13 +73,10 @@ h1 {
 /* TABLES */
 
 .table-striped tbody tr:nth-of-type(odd) {
-    background-color: rgb(147, 180, 208);
+    background-color: rgb(206, 206, 206);
 }
 
 
-.table td{
-    padding: .3rem;
-}
 
 /* Right Add */
 
@@ -81,6 +88,14 @@ h1 {
 
 #footer {
   background-color: #00182d;
+}
+
+#footer h5 {
+  color: darkgrey;
+}
+
+footer a {
+    color: #797979;
 }
 
 
