--- a/css/main.css
+++ b/css/main.css
@@ -56,6 +56,10 @@ h1, h2, h3, h4, h5, h6 {
   margin-left: 0;
 }
 
+.navbar-toggler {
+    background-color: gainsboro;
+}
+
 @media (min-width: 34em) {
   .navbar-brand {
     float: left;
